# ent-ppo

./: README.md
gfnx/: pyproject.toml
gfnx/baselines/: GAE_hypergrid.py  GAE_qm9_small.py  GAE_subeb_hypergrid.py  GAE_subeb_qm9_small.py  GAE_subeb_tfbind.py  GAE_tfbind.py  PPO_hypergrid.py  PPO_qm9_small.py  PPO_tfbind.py  RTG_pg_hypergrid.py  RTG_pg_qm9_small.py  RTG_pg_tfbind.py  TRPO_hypergrid.py  TRPO_qm9_small.py  TRPO_tfbind.py  db_hypergrid.py  db_qm9_small.py  db_tfbind.py  subtb_hypergrid.py  subtb_qm9_small.py  subtb_tfbind.py  tb_hypergrid.py  tb_qm9_small.py  tb_tfbind.py  v_baseline_hypergrid.py  v_baseline_qm9_small.py  v_baseline_tfbind.py  vanilla_pg_hypergrid.py  vanilla_pg_qm9_small.py  vanilla_pg_tfbind.py
gfnx/baselines/configs/: GAE_hypergrid.yaml  GAE_qm9_small.yaml  GAE_subeb_hypergrid.yaml  GAE_subeb_qm9_small.yaml  GAE_subeb_tfbind.yaml  GAE_tfbind.yaml  PPO_hypergrid.yaml  PPO_qm9_small.yaml  PPO_tfbind.yaml  RTG_pg_hypergrid.yaml  RTG_pg_qm9_small.yaml  RTG_pg_tfbind.yaml  TRPO_hypergrid.yaml  TRPO_qm9_small.yaml  TRPO_tfbind.yaml  db_hypergrid.yaml  db_qm9_small.yaml  db_tfbind.yaml  subtb_hypergrid.yaml  subtb_qm9_small.yaml  subtb_tfbind.yaml  tb_hypergrid.yaml  tb_qm9_small.yaml  tb_tfbind.yaml  v_baseline_hypergrid.yaml  v_baseline_qm9_small.yaml  v_baseline_tfbind.yaml  vanilla_pg_hypergrid.yaml  vanilla_pg_qm9_small.yaml  vanilla_pg_tfbind.yaml
gfnx/baselines/utils/: checkpoint.py  logger.py
gfnx/proxy/: README.md
gfnx/proxy/datasets/: base.py
gfnx/src/gfnx/: __init__.py  base.py  spaces.py
gfnx/src/gfnx/environment/: __init__.py  hypergrid.py  qm9_small.py  sequence.py  tfbind.py
gfnx/src/gfnx/metrics/: __init__.py  approx_distribution.py  base.py  correlation.py  elbo.py  eubo.py  exact_distribution.py  modes.py  reward_delta.py  top_k.py
gfnx/src/gfnx/networks/: __init__.py  reward_models.py  transformer.py
gfnx/src/gfnx/reward/: __init__.py  hypergrid.py  qm9_small.py  tfbind.py
gfnx/src/gfnx/utils/: __init__.py  bitseq.py  corr.py  dag.py  distances.py  exploration.py  ising.py  ising_hbpt_sample.py  ising_wolf_sample.py  masking.py  molecules.py  phylogenetic_tree.py  proteins.py  rollout.py
gfnx/src/gfnx/visualize/: hypergrid.py  sequence.py  visualizer.py
mols/: README.md  pyproject.toml
mols/scripts/: launch_seh_metrics_sbatch.py  run_single_seh_metrics.py  slurm_exclusions.py  submit_fixed_pb_grid.py  submit_qm9_learned_pb_tlm_lr_grid.py
mols/src/gflownet/: __init__.py  config.py  trainer.py
mols/src/gflownet/algo/: backward_policy.py  config.py  entropy_ppo.py  graph_sampling.py  (+1 more)
mols/tests/: test_envs.py  test_trajectory_metrics.py
(+12 files in other folders)
